--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,7 +1,7 @@
 # Production environment variables for Vercel deployment
 # Update this URL after Railway deployment
-VITE_API_BASE_URL=https://your-railway-app.railway.app
-VITE_WS_BASE_URL=wss://your-railway-app.railway.app
+VITE_API_BASE_URL=https://z5cmpsm2zw.eu-west-3.awsapprunner.com
+VITE_WS_BASE_URL=wss://z5cmpsm2zw.eu-west-3.awsapprunner.com
 
 # Feature flags for production
 VITE_ENABLE_ADVANCED_FEATURES=false
