feat: Complete Groq-style sidebar and conversation history implementation
🎯 Major Features Implemented:
- Auto-conversation creation for each kiff generation with meaningful titles
- Full-page conversation history with empty state and batch actions
- Groq-style collapsible knowledge sidebar with Database icon toggle
- Fixed file display in GenerateV0Page after kiff creation
- Complete Kiff branding throughout platform (Kiffs, Kiff History, New Kiff)

🚀 Conversation History System:
- Auto-creates conversations with smart titles (e.g., 'React Dashboard Kiff')
- Saves user requests and assistant responses with app metadata
- Empty state: 'Ready for your first kiff?' with call-to-action
- Batch selection and deletion of multiple conversations
- Full-page view accessible from sidebar navigation

🎨 UI/UX Improvements:
- Knowledge sidebar: Groq-style collapsible with Database icon
- Sidebar navigation: 'Kiffs' (was Applications), 'Kiff History' (was Conversations)
- File display: Auto-switches to Files tab, shows proper file tree structure
- Consistent Kiff branding: focuses on knowledge-driven app creation

🔧 Backend Enhancements:
- AGNO agent instructions updated for better knowledge grounding
- File creation events now include actual file data for frontend display
- Conversation models with tenant/user scoping and metadata tracking
- Idea generator improvements with Agno Framework specialization

🐛 Bug Fixes:
- Fixed file display issue where generated files weren't showing in right panel
- Resolved conversation creation and message saving functionality
- Fixed tenant ID handling and feature flag integration
- Improved error handling and logging throughout

All core functionality tested and working. Platform now provides complete
Claude-style conversation experience with knowledge-driven kiff generation.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -9,7 +9,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-models/
+# models/ - temporarily removed for conversation history implementation
 data/
 *.log
 .DS_Store
