--- a/frontend-lite/package.json
+++ b/frontend-lite/package.json
@@ -12,7 +12,7 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@kiff/ui": "0.1.0"
+    "@kiff/ui": "file:../packages/ui"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
